@@ -1,3 +1,8 @@
+2015-05-11  Xiaowei Zhan  <zhanxw@dumbo.csgstat.sph.umich.edu>
+
+	* Change '--meta score' for binary related individuals
+	* Improve documentation
+
 2015-05-09  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Fix and verified '--meta cov' outputs
